简单实现一个 轮询 的负载均衡算法

--- a/文档/负载均衡.md
+++ b/文档/负载均衡.md
@@ -1,3 +1,11 @@
 # 负载均衡
 
 ## 1：Ribbon
+
+## 负载均衡中的轮询算法原理：
+
+所有的服务器被放在了一个集合中，方便使用下标来进行获取。
+
+rest接口第几次请求数 % 服务器集群总数量 = 实际调用的服务器位置下标。
+
+也就是说，假如我有两台服务器，则现在为第19次请求， 19 % 2 = 1，则我会去取下标为1的服务器。每次服务重启之后 rest 接口计数从1开始计算。
