--- a/文档/负载均衡.md
+++ b/文档/负载均衡.md
@@ -9,3 +9,8 @@
 rest接口第几次请求数 % 服务器集群总数量 = 实际调用的服务器位置下标。
 
 也就是说，假如我有两台服务器，则现在为第19次请求， 19 % 2 = 1，则我会去取下标为1的服务器。每次服务重启之后 rest 接口计数从1开始计算。
+
+
+
+## 2：OpenFeign
+
